# pyconjp2019.sprint.theme.update

./: .gitignore  README.md  setup.cfg
sprinttaskauto/: __init__.py  auth.py  service.py  util.py
tests/: test_auth.py  test_main.py  test_service.py  test_util.py
tests/data/: test_select_leader_lines.csv
