[metadata]
name = sprinttaskauto
version = 0.0.1
description = PyConJP 2019 Sprintの運営に使う処理の自動化パッケージ（参加者のアンケート回答をもとにGoogleスプレッドシートの定期更新）
keywords = GoogleSpreadSheet, automation, pyconjp
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
install_requires =
    google-api-python-client
    google-auth

[options.extras_require]
dev = 
    flake8
    pytest

[options.entry_points]
console_scripts =
    sprint-staff = sprinttaskauto:main
